<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_dashboard_icon"/>
    </group>


    <item android:title="Perfil">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/menu_profile_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/menu_logout_icon"/>
            </group>

        </menu>
    </item>

    <item android:title="Menu">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_receitas"
                    android:title="@string/prescriptions"
                    android:icon="@drawable/ic_baseline_assignment_24"/>
                <item
                    android:id="@+id/nav_historico"
                    android:title="@string/historico"
                    android:icon="@drawable/ic_baseline_history_24"/>
                <item
                    android:id="@+id/nav_consultas"
                    android:title="@string/consultas"
                    android:icon="@drawable/ic_baseline_medical_services_24"/>
                <item
                    android:id="@+id/nav_farmacia"
                    android:title="@string/pharmacies"
                    android:icon="@drawable/shop_icon"/>
            </group>

        </menu>
    </item>
</menu>