<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTintMode="@color/primary_color_app"
    android:elevation="3dp"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/local_consulta_prescriptions"
                android:textColor="@color/secodary_color_app"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/text_date_prescriptions"
                android:textColor="@color/secodary_color_app"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textNomeMedico"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/text_name_doctor_prescriptions"
            android:textColor="@color/secodary_color_app"
            android:textSize="18sp" />


    </LinearLayout>
</androidx.cardview.widget.CardView>