<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color_app"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".common.auth.pharmacy.LoginPharmacy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button_farmacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/secodary_color_app"
            android:textSize="40sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_farmacia"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_patient"
                android:textColorHint="@color/secodary_color_app"
                app:boxStrokeColor="@color/secodary_color_app"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/secodary_color_app"
                app:hintTextColor="@color/secodary_color_app"
                app:startIconDrawable="@drawable/field_email_icon_black"
                app:startIconTint="@color/secodary_color_app">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_number_editText_farmacia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_semibold"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/secodary_color_app"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_farmacia"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email_farmacia"
                android:hint="@string/enter_password_patient"
                android:textColorHint="@color/secodary_color_app"
                app:boxStrokeColor="@color/secodary_color_app"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/secodary_color_app"
                app:hintTextColor="@color/secodary_color_app"
                app:startIconDrawable="@drawable/field_password_icon"
                app:startIconTint="@color/secodary_color_app">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText_farmacia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="textPassword"
                    android:textColor="@color/secodary_color_app" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/forget_password_block_farmacia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_farmacia"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/remember_me_farmacia"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/secodary_color_app"
                    android:text="@string/remember_me"
                    android:textColor="@color/secodary_color_app" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:onClick="callForgetPassword"
                    android:text="@string/forget_password" />

            </RelativeLayout>


            <Button
                android:id="@+id/letTheUserLogInFarmacia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block_farmacia"
                android:layout_marginTop="20dp"
                android:background="@drawable/my_button_bg"
                android:onClick="letTheUserLoggedIn"
                android:text="@string/login"
                android:textColor="@color/secodary_color_app" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letTheUserLogInFarmacia"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:onClick="callSignUpFromLoginPharmacy"
                android:text="@string/sign_up" />


            <RelativeLayout
                android:id="@+id/login_progress_bar_farmacia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/white_circle"
                android:elevation="8dp"
                android:padding="20dp"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true" />

            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

</ScrollView>